--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^9.0.0",
+    "create-react-app": "^2.1.1",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
@@ -42,7 +43,8 @@
     "eslint-plugin-react": "^7.11.1",
     "redux-devtools": "^3.4.1",
     "redux-devtools-extension": "^2.13.5",
-    "serve": "^10.0.0"
+    "serve": "^10.0.0",
+    "merge": ">=1.2.1"
   },
   "browserslist": [
     ">0.2%",
